--- a/pom.xml
+++ b/pom.xml
@@ -33,18 +33,18 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.13.3</version>
+			<version>2.18.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.13.3</version>
+			<version>2.18.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>3.7.7</version>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>4.5.1</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -63,7 +63,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>3.2.2</version>
 
 				<configuration>
 					<archive>
@@ -73,6 +73,23 @@
 					</archive>
 				</configuration>
 			</plugin>
+			
+	        <plugin>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <version>2.21.0</version>
+	            <dependencies>
+	            <dependency>
+	                <groupId>org.junit.platform</groupId>
+	                <artifactId>junit-platform-surefire-provider</artifactId>
+	                <version>1.2.0</version>
+	            </dependency>
+	            <dependency>
+	                <groupId>org.junit.jupiter</groupId>
+	                <artifactId>junit-jupiter-engine</artifactId>
+	                <version>5.2.0</version>
+	            </dependency>
+	            </dependencies>
+	        </plugin>
 
 			<!-- Creates a "fat jar" with jar-with-dependencies at the end of the 
 				project jar -->
@@ -113,7 +130,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.5</version>
+				<version>0.8.8</version>
 				<executions>
 					<execution>
 						<goals>
@@ -135,7 +152,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>3.0.0-M1</version>
+				<version>3.0.0</version>
 			</plugin>
 		</plugins>
 	</build>
